fix: make PKGBUILD bundled config consistent with what the script creates

--- a/lazyupdater.conf
+++ b/lazyupdater.conf
@@ -1,3 +1,8 @@
-# This file gets directly sourced by bash, please don't put spaces between assignments 
-HOOKDIR=~/repos/lzhooks
-HOOKEXTS="*.sh *.bash *.zsh *.fish *.py *.rb *.lua *.go *.js *.ts *.json"
+# Config file for lazyupdater
+# This file gets directly sourced with bash, please don't put spaces in assignments
+#
+# HOOKDIR: Directory where hooks are stored.
+# HOOKEXTS: Allowed extensions for hooks. All files matching this pattern will be executed.
+#           Lazyupdate will simply execute the file(s), use shebangs and make sure files are executable
+HOOKDIR="$HOME/repos/lzhooks"
+HOOKEXTS=("*.sh" "*.bash" "*.zsh" "*.fish" "*.py")
