refactor: rename project to lazyupdate

--- a/lazyupdate.conf
+++ b/lazyupdate.conf
@@ -1,4 +1,4 @@
-# Config file for lazyupdater
+# Config file for lazyupdate
 # This file gets directly sourced with bash, please don't put spaces in assignments
 #
 # HOOKDIR: Directory where hooks are stored.
