--- a/lazyupdate.conf
+++ b/lazyupdate.conf
@@ -5,4 +5,4 @@
 # HOOKEXTS: Allowed extensions for hooks. All files matching this pattern will be executed.
 #           Lazyupdate will simply execute the file(s), use shebangs and make sure files are executable
 HOOKDIR="$HOME/repos/lzhooks"
-HOOKEXTS=("*.sh" "*.bash" "*.zsh" "*.fish" "*.py")
+HOOKEXTS=("sh" "bash" "zsh" "fish" "py")
